--- a/ProminanceOfTemp.Rmd
+++ b/ProminanceOfTemp.Rmd
@@ -37,7 +37,7 @@ theme_set(theme_minimal())
 In addition to adding more of a limiting reactant, one way to increase the rate of a chemical reaction is to add heat. With heat, chemicals bounce around faster and so come into contact more frequently^[Hmm...is this a useful analogy with susceptible and infected hosts interacting to cause more infections? Let's revisit this later!]. The added energy also speeds reactions by providing the activation energy required in endothermic and even some ectothermic reactions. All of which is to say, reactions go faster at warmer temperatures. What are the consequences? Let's consider two:
 
 # Thermal optima
-```{r, fig.margin=TRUE,}
+```{r, fig.margin=TRUE, fig.alt = "Line graph showing the rate of an enzymatic reaction increases exponentially with increasing temperature."}
 r <- log(2)/10
 df <- tibble(Temperature = 10:50, 
              Reaction = exp(r*Temperature), 
@@ -54,7 +54,7 @@ ggplot(df, aes(Temperature, Reaction)) +
 
 Rates of chemical reactions increase _exponentially_ with temperature^[If you wonder why, look up the [Arrhenius equation](https://www.chemguide.co.uk/physical/basicrates/arrhenius.html)...yet another exponential model, but this one describes the "rate constant" of a chemical reaction.]. As a quick rule of thumb, if the temperature is increased by 10$^\circ C$, the rate of the reaction often doubles. So the rate of reactions, even enzymatic reactions such as those involved in metabolism or muscle contractions or most any other biochemical process, tends to increase like the blue line on the graph to the right.
 
-```{r, fig.margin=TRUE}
+```{r, fig.margin=TRUE, fig.alt = "Line graph showing, as in the previous graph, the rate of an enzymatic reaction increases exponentially with increasing temperature, plus a separate line showing how the proportion of enzymes that are active starts very high but then declines rapidly above a certain temperature."}
 ggplot(df, aes(Temperature, Stability*30)) + 
   geom_line(color = "red", linetype = 2) + 
   scale_y_continuous("", sec.axis = sec_axis(~ . /30, name = "Proportion enzyme active")) + 
@@ -64,7 +64,7 @@ ggplot(df, aes(Temperature, Stability*30)) +
 
 Your intuition is probably quietly screaming at you right now, saying, "yeah, but...!" And your intuition is right. This accelerating relationship between the rate of a reaction and temperature cannot go on forever. At some point, everything catches on fire and you get soot rather than a muscle contraction, right? Well before the fires start, our reactions run into other temperature limits. Most biochemical reactions involve enzymes and enzymes eventually fall apart or "denature." (The same can happen to some of the chemical reactants, too.) We might graph the rate at which an enzyme denatures as a function of temperature; see the red line on the graph to the right. 
 
-```{r, fig.margin=TRUE}
+```{r, fig.margin=TRUE, , fig.alt = "Line graph showing the overall rate of an enzymatic reaction, accounting for exponentially increasing rates and decreasing enzyme activity with temperature. It produces a hump with a long tail to the cooler side and a steep drop on the warmer side."}
 ggplot(df, aes(Temperature, Rate)) + 
   geom_line() + 
   geom_line(aes(y=Reaction), color = "blue", linetype = 2) + 
@@ -84,12 +84,13 @@ Most all of biology has some small-ish range of temperatures where we perform be
 
 This is not just hypothetical. Heat waves, especially heat waves combine with humidity^[And poverty, a lack of infrastructure, and loneliness] to make life miserable for us humans, to the point where some of us, often the most vulnerable but increasingly larger fractions of the population, can die. And climate change is, of course, making all of this work. We will see not only more heat waves, but more humid heat waves. That is important because our primary mechanism of cooling ourselves---sweating---rally only works when the sweat can evaporate and that is harder under humid conditions. So plant a tree^[Shade and evapotranspiration make a big, big difference], buy a good fan, or consider moving pole-ward^[Boy am I a ray of sunshine!]. 
 
-Anyway, why do organisms have such relatively narrow ranges of temperatures in which they thrive compared to what they can survive? Look to the thermal optima of their chemical reactions^[I am overselling this a bit. While the logic holds and there are many examples of temperature-dependent processes from the small (e.g., metabolism) to the large (e.g., speed), there are many other factors that end up affecting temperature-function relationships at the organism level, such as compensatory adaptations to nutrition. That is, we need to be cautious about scaling up these mechanisms to far without some care.]! If they can maintain their body temperatures within that narrow-ish range of temperatures, they can be much, much more efficient (or active, fast, responsive, etc.). 
+Anyway, why do organisms have such relatively narrow ranges of temperatures in which they thrive compared to what they can survive? Look to the thermal optima of their chemical reactions^[I am overselling this a bit. While the logic holds and there are many examples of temperature-dependent processes from the small (e.g., metabolism) to the large (e.g., speed), there are many other factors that end up affecting temperature-function relationships at the organism level, such as compensatory adaptations to nutrition. That is, we need to be cautious about scaling up these mechanisms too far without some care.]! If they can maintain their body temperatures within that narrow-ish range of temperatures, they can be much, much more efficient (or active, fast, responsive, etc.). 
 
 # Temperature-dependent rates of development
 
 Temperature-dependent rates and thermal optima also extend to development. Consider the process of going from an egg to a hatchling to a juvenile to an awkward, gangly pubescent teenager equivalent to a mature adult, or similarly a seed to seedling to small tree to mature tree. All of these steps are the result of a series of chemical reactions. Because these reactions tend to go faster at warmer temperatures, the time it takes to get to a particular developmental milestone (e.g., hatching or sprouting) tends to be shorter at warmer temperatures^[Yes, only up to a point.]. And while these rates increase more-or-less exponentially over a wide range of temperatures, most organisms do not live, or at least develop, over a terribly wide range of temperatures. Over this narrower range we might be forgiven for thinking that the rate is sort of linear. Let's run with this linear relationship between temperature and rates of development. What are the consequences? 
-```{r, fig.margin=TRUE, fig.cap="Time to eclosion (hatching) for black legged ticks. From Ogden et al. 2004. Journal of Medical Entomology 41:622-633." }
+
+```{r, fig.margin=TRUE, fig.cap="Time to eclosion (hatching) for black legged ticks. From Ogden et al. 2004. Journal of Medical Entomology 41:622-633.", fig.alt = "A graph showing that with increasing temperature above 10C the time to eclosion drops by half, and then half again." }
 knitr::include_graphics("DaysEcolosion.png", dpi=400)
 ```
 
@@ -97,7 +98,7 @@ First, if we were to raise, say, ticks or mosquitoes from eggs at one of a range
 
 Imagine you are driving to the West Side. Let's say it is a 300 mile journey. You could drive the whole way at 60 miles per hour and it would take 300 miles/60 mph = 5 hours or you could drive at 90 mph and it would take  300 miles/90 mph = 3 hours 20 minutes. I you are a very slow driver moving at 30 mph this trip would take 10 hours! A graph of the time it takes to get to your destination, your milestone if you will, follows the same shape as the development graph, above. 
 
-```{r, fig.margin=TRUE, fig.cap="Time to drive to the West Side as a function of speed."}
+```{r, fig.margin=TRUE, fig.cap="Time to drive to the West Side as a function of speed.", fig.alt = "A graph that looks similar to the previous graph of eclosion times, but now showing how the time to get to the West Side is cut in half as one double's their speed."}
 
 df <- tibble(Speed = 10:100, 
              Time = 300/Speed)
